# oceana

./: README.md  docker-compose.yml  test.sh
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_initial.sql  002_chat.sql  004_bot_flag.sql  005_reactions.sql  006_emoji_reactions.sql  007_signal_keys.sql  008_signing_key.sql  010_refresh_tokens.sql  011_post_updated_at.sql  012_conversation_name.sql  999_seed.sql
backend/src/: auth.rs  chat.rs  error.rs  main.rs  models.rs  rate_limit.rs  routes.rs
docker/postgres/: 02-restore-snapshot.sh  init.sh  snapshot.sql
docs/: README.md  api-reference.md  architecture.md  audit_round1.md  database-schema.md  deployment.md  dev-pilot.md  encryption.md  frontend.md  future_goals.md  lessons.md  project-roundup.md  quick-wins-plan.md  security-audit.md  websocket-protocol.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/cloudflare/: _worker.js
frontend/.svelte-kit/cloudflare-tmp/: manifest.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/coverage/: clover.xml  coverage-final.json  fingerprint.ts.html  groupkeys.ts.html  index.html  keys.ts.html  signal.ts.html  store.ts.html
frontend/e2e/: smoke.spec.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: ws.ts  (+3 more)
scripts/: bot-activity.sh  bot-conversations.sh  restore-snapshot.sh  seed-full-activity.sh  seed-images.sh  seed-markdown.sh  take-snapshot.sh
scripts/images/: generate.sh
(+279 files in other folders)
